# framework

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  docker-compose.yml  package-lock.json  package.json
.github/: dependabot.yml  release-drafter.yml
.github/actions/build_lacewing/: action.yml
.github/actions/database_migration/: action.yml
.github/actions/setup_dependencies/: action.yml
.github/workflows/: changelog.yml
assets/components/: hello_world.ts
assets/scss/: _responsive-mixin.scss  app_layout.scss  buttons.scss  cards.scss  content_layout.scss  empty_page.scss  forms.scss  index.scss  tables.scss  utilities.scss
db/: schema.sql
db/migrations/: 20220330110026_create_users_table.sql
src/: auth.rs  config.rs  error.rs  main.rs
templates/: layout.rs.html
templates/vaults/: index.rs.html
