[package]
name = "lacewing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }

deadpool-postgres = { version = "0.12.1", features = ["serde"] }
#postgres-types = { version = "0", features = ["derive"] }
tokio-postgres = { version = "0.7.10" }
tokio-postgres-rustls = "0.11.1"
time = "0.3.9"
cornucopia_client = "0"
rustls = "0"
webpki-roots = "0.26.1"

tower-http = { version = "0", default-features = false, features = ["fs", "trace"] }
mime = "0.3.0"
futures = "0.3.30"
cornucopia_async = "0.6.0"
postgres-types = "0.2.6"
rustls-pki-types = "1.3.1"
serde = { version = "1.0.197", features = ["derive"] }

[build-dependencies]
postgres = "0.19.7"
cornucopia = "0.9.0"
ructe = { version="0.14.0", features = ["mime03"] }

[dev-dependencies]
# WebDriver Library for UI testing.
thirtyfour = { version = "0", default-features = false, features = [ "reqwest-rustls-tls", "tokio-runtime" ] }
